# rust-synthesizer

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml
src/: builders.rs  emitter.rs  lib.rs  node.rs  self_gen.rs  syn_gen.rs  synthesizer_core_impl.rs  validators.rs
tests/: no_raw_invariant.rs  synthesizer_core_conformance.rs
